# AzgraCppLibrary

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
include/: azgra_types.h
include/azgra/: always_on_assert.h  azgra.h  azgra_math.h  matrix.h  optional.h  span.h
include/azgra/cli/: cli_arguments.h  cli_option.h
include/azgra/collection/: enumerable.h  enumerable_functions.h  linq.h  robin_hood.h  set_utilities.h  vector_linq.h  vector_utilities.h
include/azgra/fs/: directory_info.h  file.h  file_info.h  file_system.h  path.h  std_file_sytem.h
include/azgra/geometry/: mpl_vis.py  plot.h  point.h
include/azgra/io/: binary_file_functions.h  csv_reader.h  text_file_functions.h
include/azgra/io/stream/: buffer_source_type.h  in_binary_buffer_stream.h  in_binary_file_stream.h  in_binary_stream_base.h  memory_bit_stream.h  out_binary_buffer_stream.h  out_binary_file_stream.h  out_binary_stream_base.h
include/azgra/plotting/: plot.h
include/azgra/stream/: binary_converter.h  binary_writer.h  buffer_source_type.h  in_binary_buffer_stream.h  in_binary_file_stream.h  in_binary_stream_base.h  memory_bit_stream.h  out_binary_buffer_stream.h  out_binary_file_stream.h  out_binary_stream_base.h
include/azgra/string/: ascii_string.h  simple_string.h  smart_string_view.h
include/azgra/utilities/: binary_converter.h  custom_advancement_iterator.h  guid.h  histogram.h  print_helpers.h  stopwatch.h  type_mapper.h  vector_linq.h  vector_utilities.h  z_order.h
src/cli/: cli_arguments.cpp
src/fs/: directory_info.cpp  file.cpp  file_info.cpp  file_system.cpp  path.cpp
src/geometry/: plot.cpp
src/io/: binary_file_functions.cpp  text_file_functions.cpp
src/io/stream/: in_binary_buffer_stream.cpp  in_binary_file_stream.cpp  in_binary_stream_base.cpp  memory_bit_stream.cpp  out_binary_buffer_stream.cpp  out_binary_file_stream.cpp  out_binary_stream_base.cpp
src/stream/: binary_converter.cpp  in_binary_buffer_stream.cpp  in_binary_file_stream.cpp  in_binary_stream_base.cpp  memory_bit_stream.cpp  out_binary_buffer_stream.cpp  out_binary_file_stream.cpp  out_binary_stream_base.cpp
src/string/: ascii_string.cpp  simple_string.cpp
src/utilities/: Stopwatch.cpp  binary_converter.cpp  guid.cpp  stopwatch.cpp  z_order.cpp
tests/: CMakeLists.txt  enumerable_test.cpp  matrix_test.cpp  test.cpp
